# aibrary

./: README.md  examples.py  pyproject.toml
.github/workflows/: tests.yml
aibrary/: __init__.py
aibrary/resources/: aibrary.py  aibrary_async.py  aibrary_sync.py  aibrary_wrapper.py  chat.py  models.py  object_detection.py  ocr.py  translation.py
examples/async_requests/: anthropic_completion_async.py  anthropic_multimodal_async.py  get_all_models_async.py  image_generation_async.py  object_detection_async.py  ocr_async.py  openai_completion_async.py  openai_multimodal_audio_input_async.py  openai_multimodal_vision_async.py  stt_async.py  translation_async.py  tts_async.py
examples/streamlit-example/: main.py
examples/streamlit-example/categories/: chat.py  embedding.py  image.py  multimodal.py  object_detection.py  ocr.py  translation.py  tts.py
examples/streamlit-example/utils/: draw_box_object_detection.py  draw_box_ocr.py  file_convertor.py  model_info_generator.py  render_model_option.py
examples/streamlit-example/utils/rag/: old_rag.py
examples/sync_requests/: anthropic_completion_sync.py  anthropic_multimodal_sync.py  get_all_models_sync.py  image_generation_sync.py  object_detection_async.py  ocr_async.py  openai_completion_sync.py  openai_multimodal_audio_input_sync.py  openai_multimodal_vision_sync.py  stt_sync.py  translation_sync.py  tts_sync.py
tests/: test.py  test_all_endpoints.py  test_all_endpoints_async.py  test_all_endpoints_sync.py  test_chat_temp.py
